...

const Tab = createBottomTabNavigator();

const TABS: { name: string; icon: string; iconFilled: string }[] = [
  { name: 'Calendar', icon: 'calendar-outline', iconFilled: 'calendar' },
  { name: 'Techniques', icon: 'barbell-outline', iconFilled: 'barbell' },
  { name: 'Profile', icon: 'person-circle-outline', iconFilled: 'person-circle' },
  { name: 'Discovery', icon: 'compass-outline', iconFilled: 'compass' },
  { name: 'Friends', icon: 'people-outline', iconFilled: 'people' },
];

function CustomTabBar({ state, descriptors, navigation, profile }: any) {
  const c = useThemeColors();
...
